--- a/workflow/envs/snakemake.yaml
+++ b/workflow/envs/snakemake.yaml
@@ -1,4 +1,4 @@
-name: snake_master
+name: snakemake
 channels:
   - conda-forge
   - bioconda
@@ -14,25 +14,27 @@ dependencies:
   - async-timeout=3.0.1=py_1000
   - attrs=19.3.0=py_0
   - backcall=0.1.0=py_0
-  - bcrypt=3.1.7=py36h516909a_0
+  - bcrypt=3.1.7=py36h8c4c3a4_1
   - binutils_impl_linux-64=2.34=h53a641e_0
   - binutils_linux-64=2.34=hc952b39_18
   - bleach=3.1.4=pyh9f0ad1d_0
-  - boto3=1.12.32=pyh9f0ad1d_0
-  - botocore=1.15.32=pyh9f0ad1d_0
+  - boto3=1.13.1=pyh9f0ad1d_0
+  - botocore=1.16.1=pyh9f0ad1d_0
+  - brotlipy=0.7.0=py36h8c4c3a4_1000
   - bwidget=1.9.14=0
   - bzip2=1.0.8=h516909a_2
-  - ca-certificates=2019.11.28=hecc5488_0
+  - ca-certificates=2020.4.5.1=hecc5488_0
   - cachetools=3.1.1=py_0
   - cairo=1.16.0=hcf35c78_1003
-  - certifi=2019.11.28=py36h9f0ad1d_1
+  - certifi=2020.4.5.1=py36h9f0ad1d_0
   - cffi=1.14.0=py36hd463f26_0
   - chardet=3.0.4=py36h9f0ad1d_1006
-  - configargparse=1.1=pyh8c360ce_0
+  - configargparse=1.2.3=pyh9f0ad1d_0
   - crc32c=2.0=py36h516909a_0
-  - cryptography=2.8=py36h45558ae_2
-  - curl=7.68.0=hf8cf82a_0
+  - cryptography=2.9.2=py36h45558ae_0
+  - curl=7.69.1=h33f0ec9_0
   - datrie=0.8.2=py36h8c4c3a4_0
+  - dbus=1.13.6=he372182_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - docutils=0.15.2=py36_0
@@ -52,51 +54,57 @@ dependencies:
   - ftputil=3.4=py_0
   - gcc_impl_linux-64=7.3.0=hd420e75_5
   - gcc_linux-64=7.3.0=h553295d_18
-  - gdk-pixbuf=2.38.2=h3f25603_2
+  - gdk-pixbuf=2.38.2=h3f25603_3
   - gettext=0.19.8.1=hc5be6a0_1002
   - gfortran_impl_linux-64=7.3.0=hdf63c60_5
   - gfortran_linux-64=7.3.0=h553295d_18
   - ghostscript=9.22=hf484d3e_1001
   - giflib=5.2.1=h516909a_2
-  - gitdb=4.0.2=py_0
-  - gitpython=3.1.0=py_0
-  - glib=2.58.3=py36hd3ed26a_1003
+  - gitdb=4.0.4=py_0
+  - gitpython=3.1.1=py_0
+  - glib=2.64.2=h6f030ca_0
   - gobject-introspection=1.58.2=py36h6d43c07_1004
-  - google-api-core=1.16.0=py36_1
-  - google-auth=1.12.0=pyh9f0ad1d_0
+  - google-api-core=1.17.0=py36h9f0ad1d_0
+  - google-auth=1.14.1=pyh9f0ad1d_0
   - google-cloud-core=1.3.0=py_0
-  - google-cloud-storage=1.26.0=py_0
+  - google-cloud-storage=1.28.0=pyh9f0ad1d_0
   - google-resumable-media=0.5.0=py_1
-  - googleapis-common-protos=1.51.0=py36_1
+  - googleapis-common-protos=1.51.0=py36h9f0ad1d_2
   - graphite2=1.3.13=he1b5a44_1001
   - graphviz=2.42.3=h0511662_0
   - gsl=2.6=h294904e_0
+  - gst-plugins-base=1.14.5=h0935bb2_2
+  - gstreamer=1.14.5=h36ae1b5_2
   - gxx_impl_linux-64=7.3.0=hdf63c60_5
   - gxx_linux-64=7.3.0=h553295d_18
   - harfbuzz=2.4.0=h9f30f68_3
   - icu=64.2=he1b5a44_1
   - idna=2.9=py_1
   - idna_ssl=1.1.0=py36_1000
-  - imagemagick=7.0.10_3=pl526ha9fe49d_0
+  - imagemagick=7.0.10_10=pl526h201ca68_0
   - importlib-metadata=1.6.0=py36h9f0ad1d_0
   - importlib_metadata=1.6.0=0
-  - ipykernel=5.2.0=py36h95af2a2_1
-  - ipython=7.13.0=py36h9f0ad1d_2
+  - ipykernel=5.2.1=py36h95af2a2_0
+  - ipython=7.14.0=py36h9f0ad1d_0
   - ipython_genutils=0.2.0=py_1
-  - jbig=2.1=h14c3975_2001
-  - jedi=0.16.0=py36h9f0ad1d_1
-  - jinja2=2.11.1=py_0
+  - ipywidgets=7.5.1=py_0
+  - jbig=2.1=h516909a_2002
+  - jedi=0.17.0=py36h9f0ad1d_0
+  - jinja2=2.11.2=pyh9f0ad1d_0
   - jmespath=0.9.5=py_0
   - jpeg=9c=h14c3975_1001
   - jsonschema=3.2.0=py36h9f0ad1d_1
-  - jupyter_client=6.1.2=py_0
+  - jupyter=1.0.0=py_2
+  - jupyter_client=6.1.3=py_0
+  - jupyter_console=6.1.0=py_1
   - jupyter_core=4.6.3=py36h9f0ad1d_1
-  - krb5=1.16.4=h2fd8d38_0
+  - krb5=1.17.1=h2fd8d38_0
   - ld_impl_linux-64=2.34=h53a641e_0
   - libblas=3.8.0=16_openblas
   - libcblas=3.8.0=16_openblas
-  - libcroco=0.6.13=h8d621e5_0
-  - libcurl=7.68.0=hda55be3_0
+  - libclang=9.0.1=default_hde54327_0
+  - libcroco=0.6.13=h8d621e5_1
+  - libcurl=7.69.1=hf7181ac_0
   - libedit=3.1.20170329=hf8c457e_1001
   - libffi=3.2.1=he1b5a44_1007
   - libgcc-ng=9.2.0=h24d8f2e_2
@@ -104,50 +112,56 @@ dependencies:
   - libgomp=9.2.0=h24d8f2e_2
   - libiconv=1.15=h516909a_1006
   - liblapack=3.8.0=16_openblas
+  - libllvm9=9.0.1=he513fc3_1
   - libopenblas=0.3.9=h5ec1e0e_0
   - libpng=1.6.37=hed695b0_1
-  - libprotobuf=3.8.0=h8b12597_0
-  - librsvg=2.46.4=h33a7fed_1
+  - libprotobuf=3.11.4=h8b12597_0
+  - librsvg=2.48.4=h33a7fed_0
   - libsodium=1.0.17=h516909a_0
   - libssh2=1.8.2=h22169c7_2
   - libstdcxx-ng=9.2.0=hdf63c60_2
-  - libtiff=4.1.0=hc3755c2_3
+  - libtiff=4.1.0=hc7e4089_6
   - libtool=2.4.6=h14c3975_1002
   - libuuid=2.32.1=h14c3975_1000
-  - libwebp=1.0.2=h56121f0_5
+  - libwebp=1.1.0=h56121f0_4
+  - libwebp-base=1.1.0=h516909a_3
   - libxcb=1.13=h14c3975_1002
+  - libxkbcommon=0.10.0=he1b5a44_0
   - libxml2=2.9.10=hee79883_0
-  - llvm-openmp=9.0.1=hc9558a2_2
-  - lz4-c=1.8.3=he1b5a44_1001
+  - llvm-openmp=10.0.0=hc9558a2_0
+  - lz4-c=1.9.2=he1b5a44_0
   - make=4.3=h516909a_0
   - markupsafe=1.1.1=py36h8c4c3a4_1
-  - mistune=0.8.4=py36h516909a_1000
-  - multidict=4.7.5=py36h516909a_0
-  - nbconvert=5.6.1=py36_0
-  - nbformat=5.0.4=py_0
+  - mistune=0.8.4=py36h8c4c3a4_1001
+  - multidict=4.7.5=py36h8c4c3a4_1
+  - nbconvert=5.6.1=py36h9f0ad1d_1
+  - nbformat=5.0.6=py_0
   - ncurses=6.1=hf484d3e_1002
   - networkx=2.4=py_1
   - notebook=6.0.3=py36_0
+  - nspr=4.25=he1b5a44_0
+  - nss=3.47=he751ad9_0
   - numpy=1.18.1=py36h7314795_1
   - openjpeg=2.3.1=h981e76c_3
-  - openssl=1.1.1e=h516909a_0
-  - pandas=1.0.3=py36h830a2c2_0
-  - pandoc=2.9.2=0
+  - openssl=1.1.1g=h516909a_0
+  - pandas=1.0.3=py36h830a2c2_1
+  - pandoc=2.9.2.1=0
   - pandocfilters=1.4.2=py_1
-  - pango=1.42.4=h7062337_3
+  - pango=1.42.4=h7062337_4
   - paramiko=2.7.1=py36_0
-  - parso=0.6.2=py_0
+  - parso=0.7.0=pyh9f0ad1d_0
   - pcre=8.44=he1b5a44_0
   - perl=5.26.2=h516909a_1006
   - pexpect=4.8.0=py36h9f0ad1d_1
   - pickleshare=0.7.5=py36h9f0ad1d_1001
-  - pip=20.0.2=py_2
+  - pip=20.1=pyh9f0ad1d_0
   - pixman=0.38.0=h516909a_1003
   - pkg-config=0.29.2=h516909a_1006
   - prettytable=0.7.2=py_3
   - prometheus_client=0.7.1=py_0
   - prompt-toolkit=3.0.5=py_0
-  - protobuf=3.8.0=py36he1b5a44_2
+  - prompt_toolkit=3.0.5=0
+  - protobuf=3.11.4=py36h831f99a_1
   - psutil=5.7.0=py36h8c4c3a4_1
   - pthread-stubs=0.4=h14c3975_1001
   - ptyprocess=0.6.0=py_1001
@@ -158,174 +172,178 @@ dependencies:
   - pygraphviz=1.3.1=py36_0
   - pynacl=1.3.0=py36h516909a_1001
   - pyopenssl=19.1.0=py_1
+  - pyqt=5.12.3=py36haa643ae_2
   - pyrsistent=0.16.0=py36h8c4c3a4_0
   - pysftp=0.2.9=py_1
   - pysocks=1.7.1=py36h9f0ad1d_1
-  - python=3.6.10=h9d8adfe_1009_cpython
+  - python=3.6.10=h8356626_1011_cpython
   - python-dateutil=2.8.1=py_0
   - python-irodsclient=0.8.2=py_0
   - python_abi=3.6=1_cp36m
-  - pytz=2019.3=py_0
+  - pytz=2020.1=pyh9f0ad1d_0
   - pyyaml=5.3.1=py36h8c4c3a4_0
   - pyzmq=19.0.0=py36h9947dbf_1
-  - r-askpass=1.1=r36hcdcec82_1
-  - r-assertthat=0.2.1=r36h6115d3f_1
-  - r-backports=1.1.5=r36hcdcec82_0
-  - r-base=3.6.3=h7ed4ef7_0
-  - r-base64enc=0.1_3=r36hcdcec82_1003
-  - r-boot=1.3_24=r36h6115d3f_0
-  - r-broom=0.5.5=r36h6115d3f_0
+  - qt=5.12.5=hd8c4c69_1
+  - qtconsole=4.7.3=pyh9f0ad1d_0
+  - qtpy=1.9.0=py_0
+  - r-askpass=1.1=r36hcdcec82_2
+  - r-assertthat=0.2.1=r36h6115d3f_2
+  - r-backports=1.1.6=r36hcdcec82_2
+  - r-base=3.6.3=h316533a_2
+  - r-base64enc=0.1_3=r36hcdcec82_1004
+  - r-boot=1.3_25=r36h6115d3f_1
+  - r-broom=0.5.6=r36h6115d3f_0
   - r-callr=3.4.3=r36h6115d3f_0
-  - r-caret=6.0_86=r36hcdcec82_0
+  - r-caret=6.0_86=r36hcdcec82_1
   - r-cellranger=1.1.0=r36h6115d3f_1002
-  - r-class=7.3_16=r36hcdcec82_0
-  - r-cli=2.0.2=r36h6115d3f_0
-  - r-clipr=0.7.0=r36h6115d3f_0
-  - r-cluster=2.1.0=r36h9bbef5b_2
-  - r-codetools=0.2_16=r36h6115d3f_1001
-  - r-colorspace=1.4_1=r36hcdcec82_1
-  - r-crayon=1.3.4=r36h6115d3f_1002
-  - r-curl=4.3=r36hcdcec82_0
-  - r-data.table=1.12.8=r36hcdcec82_0
+  - r-class=7.3_17=r36hcdcec82_1
+  - r-cli=2.0.2=r36h6115d3f_1
+  - r-clipr=0.7.0=r36h6115d3f_1
+  - r-cluster=2.1.0=r36h9bbef5b_3
+  - r-codetools=0.2_16=r36h6115d3f_1002
+  - r-colorspace=1.4_1=r36hcdcec82_2
+  - r-crayon=1.3.4=r36h6115d3f_1003
+  - r-curl=4.3=r36hcdcec82_1
+  - r-data.table=1.12.8=r36hcdcec82_1
   - r-dbi=1.1.0=r36h6115d3f_0
-  - r-dbplyr=1.4.2=r36h6115d3f_1
+  - r-dbplyr=1.4.3=r36h6115d3f_0
   - r-desc=1.2.0=r36h6115d3f_1002
-  - r-digest=0.6.25=r36h0357c0b_0
+  - r-digest=0.6.25=r36h0357c0b_2
   - r-dplyr=0.8.5=r36h0357c0b_0
-  - r-ellipsis=0.3.0=r36hcdcec82_0
+  - r-ellipsis=0.3.0=r36hcdcec82_1
   - r-essentials=3.6=r36_2001
-  - r-evaluate=0.14=r36h6115d3f_1
-  - r-fansi=0.4.1=r36hcdcec82_0
-  - r-farver=2.0.3=r36h0357c0b_0
-  - r-fastmap=1.0.1=r36h0357c0b_0
+  - r-evaluate=0.14=r36h6115d3f_2
+  - r-fansi=0.4.1=r36hcdcec82_1
+  - r-farver=2.0.3=r36h0357c0b_1
+  - r-fastmap=1.0.1=r36h0357c0b_1
   - r-forcats=0.5.0=r36h6115d3f_0
   - r-foreach=1.5.0=r36h6115d3f_0
-  - r-foreign=0.8_76=r36hcdcec82_0
+  - r-foreign=0.8_76=r36hcdcec82_1
   - r-formatr=1.7=r36h6115d3f_1
-  - r-fs=1.3.2=r36h0357c0b_0
-  - r-generics=0.0.2=r36h6115d3f_1002
+  - r-fs=1.4.1=r36h0357c0b_1
+  - r-generics=0.0.2=r36h6115d3f_1003
   - r-ggplot2=3.3.0=r36h6115d3f_0
   - r-gistr=0.5.0=r36h6115d3f_0
   - r-glmnet=3.0_2=r36h9bbef5b_0
-  - r-glue=1.3.2=r36hcdcec82_0
+  - r-glue=1.4.0=r36hcdcec82_1
   - r-gower=0.2.1=r36hcdcec82_1
-  - r-gtable=0.3.0=r36h6115d3f_2
+  - r-gtable=0.3.0=r36h6115d3f_3
   - r-haven=2.2.0=r36hde08347_0
-  - r-hexbin=1.28.1=r36h9bbef5b_0
-  - r-highr=0.8=r36h6115d3f_1
+  - r-hexbin=1.28.1=r36h9bbef5b_1
+  - r-highr=0.8=r36h6115d3f_2
   - r-hms=0.5.3=r36h6115d3f_0
-  - r-htmltools=0.4.0=r36h0357c0b_0
+  - r-htmltools=0.4.0=r36h0357c0b_1
   - r-htmlwidgets=1.5.1=r36h6115d3f_0
   - r-httpuv=1.5.2=r36h0357c0b_1
-  - r-httr=1.4.1=r36h6115d3f_1
+  - r-httr=1.4.1=r36h6115d3f_2
   - r-ipred=0.9_9=r36hcdcec82_1
   - r-irdisplay=0.7=r36_1001
   - r-irkernel=1.1=r36h6115d3f_0
-  - r-isoband=0.2.0=r36h0357c0b_0
+  - r-isoband=0.2.1=r36h0357c0b_0
   - r-iterators=1.0.12=r36h6115d3f_0
-  - r-jsonlite=1.6.1=r36hcdcec82_0
-  - r-kernsmooth=2.23_16=r36hfa343cc_1
+  - r-jsonlite=1.6.1=r36hcdcec82_1
+  - r-kernsmooth=2.23_17=r36hfa343cc_1
   - r-knitr=1.28=r36h6115d3f_0
-  - r-labeling=0.3=r36h6115d3f_1002
+  - r-labeling=0.3=r36h6115d3f_1003
   - r-later=1.0.0=r36h0357c0b_0
-  - r-lattice=0.20_40=r36hcdcec82_0
+  - r-lattice=0.20_41=r36hcdcec82_2
   - r-lava=1.6.7=r36h6115d3f_0
-  - r-lazyeval=0.2.2=r36hcdcec82_1
-  - r-lifecycle=0.2.0=r36h6115d3f_0
-  - r-lubridate=1.7.4=r36h0357c0b_1002
-  - r-magrittr=1.5=r36h6115d3f_1002
-  - r-maps=3.3.0=r36hcdcec82_1003
+  - r-lazyeval=0.2.2=r36hcdcec82_2
+  - r-lifecycle=0.2.0=r36h6115d3f_1
+  - r-lubridate=1.7.8=r36h0357c0b_0
+  - r-magrittr=1.5=r36h6115d3f_1003
+  - r-maps=3.3.0=r36hcdcec82_1004
   - r-markdown=1.1=r36hcdcec82_0
-  - r-mass=7.3_51.5=r36hcdcec82_0
-  - r-matrix=1.2_18=r36h7fa42b6_2
-  - r-mgcv=1.8_31=r36h7fa42b6_0
-  - r-mime=0.9=r36hcdcec82_0
+  - r-mass=7.3_51.6=r36hcdcec82_2
+  - r-matrix=1.2_18=r36h7fa42b6_3
+  - r-mgcv=1.8_31=r36h7fa42b6_1
+  - r-mime=0.9=r36hcdcec82_1
   - r-modelmetrics=1.2.2.2=r36h0357c0b_0
-  - r-modelr=0.1.6=r36h6115d3f_0
-  - r-munsell=0.5.0=r36h6115d3f_1002
-  - r-nlme=3.1_145=r36h9bbef5b_0
-  - r-nnet=7.3_13=r36hcdcec82_0
+  - r-modelr=0.1.7=r36h6115d3f_0
+  - r-munsell=0.5.0=r36h6115d3f_1003
+  - r-nlme=3.1_147=r36h9bbef5b_1
+  - r-nnet=7.3_14=r36hcdcec82_1
   - r-numderiv=2016.8_1.1=r36h6115d3f_1
-  - r-openssl=1.4.1=r36h9c8475f_0
+  - r-openssl=1.4.1=r36he5c4762_1
   - r-pbdzmq=0.3_3=r36h559a7a4_1002
   - r-pillar=1.4.3=r36h6115d3f_0
-  - r-pkgbuild=1.0.6=r36h6115d3f_0
-  - r-pkgconfig=2.0.3=r36h6115d3f_0
+  - r-pkgbuild=1.0.7=r36h6115d3f_0
+  - r-pkgconfig=2.0.3=r36h6115d3f_1
   - r-pkgload=1.0.2=r36h0357c0b_1001
-  - r-plogr=0.2.0=r36h6115d3f_1002
-  - r-plyr=1.8.6=r36h0357c0b_0
-  - r-praise=1.0.0=r36h6115d3f_1003
-  - r-prettyunits=1.1.1=r36h6115d3f_0
+  - r-plogr=0.2.0=r36h6115d3f_1003
+  - r-plyr=1.8.6=r36h0357c0b_1
+  - r-praise=1.0.0=r36h6115d3f_1004
+  - r-prettyunits=1.1.1=r36h6115d3f_1
   - r-proc=1.16.2=r36h0357c0b_0
   - r-processx=3.4.2=r36hcdcec82_0
   - r-prodlim=2019.11.13=r36h0357c0b_0
   - r-progress=1.2.2=r36h6115d3f_1
   - r-promises=1.1.0=r36h0357c0b_0
   - r-pryr=0.1.4=r36h0357c0b_1003
-  - r-ps=1.3.2=r36hcdcec82_0
-  - r-purrr=0.3.3=r36hcdcec82_0
-  - r-quantmod=0.4_16=r36h6115d3f_0
-  - r-r6=2.4.1=r36h6115d3f_0
+  - r-ps=1.3.2=r36hcdcec82_1
+  - r-purrr=0.3.4=r36hcdcec82_1
+  - r-quantmod=0.4.17=r36h6115d3f_0
+  - r-r6=2.4.1=r36h6115d3f_1
   - r-randomforest=4.6_14=r36h9bbef5b_1002
   - r-rbokeh=0.5.0=r36h6115d3f_1002
-  - r-rcolorbrewer=1.1_2=r36h6115d3f_1002
-  - r-rcpp=1.0.4=r36h0357c0b_0
+  - r-rcolorbrewer=1.1_2=r36h6115d3f_1003
+  - r-rcpp=1.0.4.6=r36h0357c0b_1
   - r-readr=1.3.1=r36h0357c0b_1002
-  - r-readxl=1.3.1=r36h0357c0b_2
-  - r-recipes=0.1.10=r36h6115d3f_0
+  - r-readxl=1.3.1=r36hde08347_3
+  - r-recipes=0.1.12=r36h6115d3f_0
   - r-recommended=3.6=r36_1003
   - r-rematch=1.0.1=r36h6115d3f_1002
   - r-repr=1.1.0=r36h6115d3f_0
   - r-reprex=0.3.0=r36h6115d3f_1
-  - r-reshape2=1.4.3=r36h0357c0b_1004
-  - r-rlang=0.4.5=r36hcdcec82_0
+  - r-reshape2=1.4.4=r36h0357c0b_0
+  - r-rlang=0.4.6=r36hcdcec82_0
   - r-rmarkdown=2.1=r36h6115d3f_0
-  - r-rpart=4.1_15=r36hcdcec82_1
-  - r-rprojroot=1.3_2=r36h6115d3f_1002
-  - r-rstudioapi=0.11=r36h6115d3f_0
+  - r-rpart=4.1_15=r36hcdcec82_2
+  - r-rprojroot=1.3_2=r36h6115d3f_1003
+  - r-rstudioapi=0.11=r36h6115d3f_1
   - r-rvest=0.3.5=r36h6115d3f_0
   - r-scales=1.1.0=r36h6115d3f_0
   - r-selectr=0.4_2=r36h6115d3f_0
   - r-shape=1.4.4=r36_1002
   - r-shiny=1.4.0.2=r36h6115d3f_0
-  - r-sourcetools=0.1.7=r36he1b5a44_1001
-  - r-spatial=7.3_11=r36hcdcec82_1003
+  - r-sourcetools=0.1.7=r36he1b5a44_1002
+  - r-spatial=7.3_12=r36hcdcec82_0
   - r-squarem=2020.2=r36h6115d3f_0
-  - r-stringi=1.4.6=r36h0e574ca_0
-  - r-stringr=1.4.0=r36h6115d3f_1
-  - r-survival=3.1_11=r36hcdcec82_0
-  - r-sys=3.3=r36hcdcec82_0
+  - r-stringi=1.4.6=r36h0e574ca_2
+  - r-stringr=1.4.0=r36h6115d3f_2
+  - r-survival=3.1_12=r36hcdcec82_1
+  - r-sys=3.3=r36hcdcec82_1
   - r-testthat=2.3.2=r36h0357c0b_0
-  - r-tibble=3.0.0=r36hcdcec82_0
+  - r-tibble=3.0.1=r36hcdcec82_0
   - r-tidyr=1.0.2=r36h0357c0b_0
   - r-tidyselect=1.0.0=r36h6115d3f_0
   - r-tidyverse=1.3.0=r36h6115d3f_1
   - r-timedate=3043.102=r36h6115d3f_1001
-  - r-tinytex=0.21=r36h6115d3f_0
+  - r-tinytex=0.22=r36h6115d3f_0
   - r-ttr=0.23_6=r36hcdcec82_0
-  - r-utf8=1.1.4=r36hcdcec82_1001
-  - r-uuid=0.1_4=r36hcdcec82_0
-  - r-vctrs=0.2.4=r36hcdcec82_0
-  - r-viridislite=0.3.0=r36h6115d3f_1002
+  - r-utf8=1.1.4=r36hcdcec82_1003
+  - r-uuid=0.1_4=r36hcdcec82_1
+  - r-vctrs=0.2.4=r36hcdcec82_1
+  - r-viridislite=0.3.0=r36h6115d3f_1003
   - r-whisker=0.4=r36h6115d3f_0
-  - r-withr=2.1.2=r36h6115d3f_1001
-  - r-xfun=0.12=r36h6115d3f_0
-  - r-xml2=1.2.5=r36h0357c0b_0
-  - r-xtable=1.8_4=r36h6115d3f_2
-  - r-xts=0.12_0=r36hcdcec82_0
-  - r-yaml=2.2.1=r36hcdcec82_0
-  - r-zeallot=0.1.0=r36h6115d3f_1001
-  - r-zoo=1.8_7=r36hcdcec82_0
+  - r-withr=2.2.0=r36h6115d3f_1
+  - r-xfun=0.13=r36h6115d3f_1
+  - r-xml2=1.3.2=r36h0357c0b_1
+  - r-xtable=1.8_4=r36h6115d3f_3
+  - r-xts=0.12_0=r36hcdcec82_1
+  - r-yaml=2.2.1=r36hcdcec82_1
+  - r-zeallot=0.1.0=r36h6115d3f_1002
+  - r-zoo=1.8_8=r36hcdcec82_0
   - ratelimiter=1.2.0=py36_1000
   - readline=8.0=hf8c457e_0
   - requests=2.23.0=pyh8c360ce_2
   - rsa=4.0=py_0
-  - s3transfer=0.3.3=py36h9f0ad1d_0
+  - s3transfer=0.3.3=py36h9f0ad1d_1
   - sed=4.7=h1bed415_1000
   - send2trash=1.5.0=py_0
   - setuptools=46.1.3=py36h9f0ad1d_0
   - six=1.14.0=py_1
-  - smmap=3.0.1=py_0
+  - smmap=3.0.2=pyh9f0ad1d_0
   - snakemake=5.13.0=0
   - snakemake-minimal=5.13.0=py_0
   - sqlite=3.30.1=hcee41ef_0
@@ -336,11 +354,12 @@ dependencies:
   - toposort=1.5=py_3
   - tornado=6.0.4=py36h8c4c3a4_1
   - traitlets=4.3.3=py36h9f0ad1d_1
-  - typing_extensions=3.7.4.1=py36h9f0ad1d_3
-  - urllib3=1.25.7=py36h9f0ad1d_1
+  - typing_extensions=3.7.4.2=py_0
+  - urllib3=1.25.9=py_0
   - wcwidth=0.1.9=pyh9f0ad1d_0
   - webencodings=0.5.1=py_1
   - wheel=0.34.2=py_1
+  - widgetsnbextension=3.5.1=py36_0
   - wrapt=1.12.1=py36h8c4c3a4_1
   - xmlrunner=1.7.7=py_0
   - xorg-kbproto=1.0.7=h14c3975_1002
@@ -356,12 +375,16 @@ dependencies:
   - xorg-renderproto=0.11.1=h14c3975_1002
   - xorg-xextproto=7.3.0=h14c3975_1002
   - xorg-xproto=7.0.31=h14c3975_1007
-  - xz=5.2.4=h516909a_1002
-  - yaml=0.2.2=h516909a_1
+  - xz=5.2.5=h516909a_0
+  - yaml=0.2.4=h516909a_0
   - yarl=1.3.0=py36h516909a_1000
   - zeromq=4.3.2=he1b5a44_2
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h516909a_1006
-  - zstd=1.4.4=h3b9ef0a_2
-prefix: /hpc/dla_mm/bogaert/miniconda3/envs/snake_master
+  - zstd=1.4.4=h6597ccf_3
+  - pip:
+    - pyqt5-sip==4.19.18
+    - pyqtchart==5.12
+    - pyqtwebengine==5.12.1
+prefix: /hpc/dla_mm/bogaert/miniconda3/envs/snakemake
 
